Update license & add CPAL attribution

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,7 @@
                             {% block page_header %}{% endblock %}
                             {% block main %}{% endblock %}
                             {% include 'includes/demo_footer.html' %}
+                            {% include 'includes/attribution.html' %}
                         </main>
                     </div>
                 </div>
