--- a/templates/message_base.html
+++ b/templates/message_base.html
@@ -7,5 +7,6 @@
                 {% block main %}{% endblock %}
             </div>
         </div>
+        {% include 'includes/attribution.html' %}
     </div>
 {% endblock body %}
